2008-05-15 wolframfranke

	* Fixed compilation errors and warnings when compiling for 10.3.9 on the Mac.

2008-04-29 arne

	* fix mac 64 bit build
	* eleminate most warnings for mac build
	
2008-04-27 arne

	* first part of a new file selector implementation (currently only mac is implemented)
	* timer class on Mac uses 64 bit safe API now
	* using double type instead of float for CCoord if VSTGUI_FLOAT_COORDINATES is defined
	* first part for Cocoa to register objective-c classes on the fly
	* Cocoa is only available if building for Mac OS X 10.5 or later

2008-04-21 wolframfranke

	* Fixed memory leak of 1 menuItem in COptionMenu::removeAllEntry ().
	
2008-03-26 wolframfranke

	* Fixed crash in COptionMenu when it is empty.
	* Added virtual destructors for IMouseObserver, CControlListener and
	  IMultiBitmapControl.
	* Virtualized CParamDisplay::drawText to allow overriding in inherited classes.
	
2007-11-08 arne

	* COptionMenuScheme is deprecated
	* removed CParamDisplay::setTxtFace and getTxtFace
	* CoreText support for building 64 bit variant on Mac OS X.
	* refactoring of COptionMenu, menu items have their own class (CMenuItem) with support for Icons. (Windows not completely done yet)
		Source code changes may occur as item states are not encoded in the title anymore
	* some cocoa fixes
	* autosizing support for views
	
2007-10-16 arne

	* Cocoa support (except CTooltipSupport and CFileSelector)

2007-10-08 arne

	* created vstgui_350 branch

2007-10-03 arne

	* add visible state for CView
	* onMouseExited wasn't called on Mac OS X when mouse leaves the frame
	* changed order for setDirty (false) and invalidRect (size) in CView::invalid () which should fix some issues with non drawing updates
	
2007-08-17 arne

	* Unicode support for Windows (CFileSelector is not completely done yet)
	* CDrawContext::drawRect should draw the same now with Quartz and GDI+